# sistemasdistribuido

./: KUBERNETES.txt
docker/: Dockerfile  matrix-deployment.yaml  matrix-service.yaml
docker/source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  multMatrix  multmatrix_imp.h  multmatrix_stub.h  operaciones.h  resultado.txt  resultado2.txt  serverObjetos.cpp
multMatrix/: CMakeCache.txt  Makefile  cmake_install.cmake  main_multMatrix.cpp  multMatrix  multmatrix.cpp  multmatrix_stub.h  resultado.txt  resultado2.txt  serverMultmatrix
